--- a/authapp/templates/authapp/register.html
+++ b/authapp/templates/authapp/register.html
@@ -9,8 +9,8 @@
         <input class="form-control" type="submit" value="Регистрация">
     </form>
     <button class="btn btn-round form-control">
-        <a href="{% url 'authapp:register' %}" class="">
-            Регистрация2
+        <a href="{% url 'main' %}" class="">
+            На главную
         </a>
     </button>
 
