--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -10,8 +10,13 @@
     </title>
     {% block css %}
         {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> {% endcomment %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
         <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}">
         <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css'%}">
+    {% endblock %}
+    {% block js %}
+        <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
 </head>
 <body>
