--- a/basketapp/templates/basketapp/includes/inc_basket_list.html
+++ b/basketapp/templates/basketapp/includes/inc_basket_list.html
@@ -1,6 +1,7 @@
+{% load my_tags %}
 {% for item in basket_items %}
     <div class="basket_record">
-        <img src="/media/{{ item.product.image }}"alt="{{ item.product.short_desc }}">
+        <img src="{{ item.product.image|media_folder_products }}"alt="{{ item.product.short_desc }}">
         <span class="category_name">{{ item.product.category.name }}</span>
         <span class="product_name">{{ item.product.name }}</span>
         <span class="product_price">{{ item.product.price }}&nbsp;руб</span>
@@ -8,7 +9,7 @@
         <span class="product_cost">{{ item.product_cost }}&nbsp;руб</span>
         <button class="btn btn-round" name="{{ item.pk }}">
             Удалить
-            {% comment %} <a href="{% url 'basket:delete' item.pk %}" class="delete">удалить</a> {% endcomment %}
+            <a href="{% url 'basket:delete' item.pk %}" class="delete">удалить</a>
         </button>
     </div>
 {% endfor %}
