--- a/mainapp/templates/mainapp/product.html
+++ b/mainapp/templates/mainapp/product.html
@@ -1,5 +1,6 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
+{% load my_tags %}
 
 {% block content %}
     <div class="hero-white">
@@ -16,17 +17,17 @@
         <div class="details-products">
             <div class="details-slider">
                 <div class="slider-product">
-                    <img src="/media/{{ product.image }}" alt="{{ product.short_desc }}">
+                    <img src="{{ product.image|media_folder_products }}" alt="{{ product.short_desc }}">
                 </div>
                 <div class="slider-control">
                     <div class="block">
-                        <a href="#"><img src="/media/{{ product.image }}" alt="вариант 1"></a>
+                        <a href="#"><img src="{{ product.image|media_folder_products }}" alt="вариант 1"></a>
                     </div>
                     <div class="block">
-                        <a href="#"><img src="/media/{{ product.image }}" alt="вариант 2"></a>
+                        <a href="#"><img src="{{ product.image|media_folder_products }}" alt="вариант 2"></a>
                     </div>
                     <div class="block">
-                        <a href="#"><img src="/media/{{ product.image }}" alt="вариант 3"></a>
+                        <a href="#"><img src="{{ product.image|media_folder_products }}" alt="вариант 3"></a>
                     </div>
                 </div>
             </div>
