--- a/mainapp/templates/mainapp/products.html
+++ b/mainapp/templates/mainapp/products.html
@@ -1,5 +1,7 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
+{% load my_tags %}
+
 {% block content %}
 		<div class="hero-white">
 			<div class="header clearfix">
@@ -17,21 +19,21 @@
 			<div class="details-products">
 				<div class="details-slider">
 					<div class="slider-product">
-						<img src="/media/{{ hot_product.image }}">
+						<img src="{{ hot_product.image|media_folder_products }}">
 					</div>
 					<div class="slider-control">
 						<div class="block">
-							<a href="#"><img src="/media/{{ hot_product.image }}" alt="">
+							<a href="#"><img src="{{ hot_product.image|media_folder_products }}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="/media/{{ hot_product.image }}" alt="">
+							<a href="#"><img src="{{ hot_product.image|media_folder_products }}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
 						<div class="block">
-							<a href="#"><img src="/media/{{ hot_product.image }}" alt="">
+							<a href="#"><img src="{{ hot_product.image|media_folder_products }}" alt="">
 								<div class="text"></div>
 							</a>
 						</div>
