--- a/ordersapp/templates/ordersapp/order_detail.html
+++ b/ordersapp/templates/ordersapp/order_detail.html
@@ -12,7 +12,9 @@
                 <span class = "category_name">
                     {{ item.product.category.name }}
                 </span>
-                <span class = "product_name">{{ item.product.name }}</span>
+                <span class = "product_name">
+                    {{ item.product.name }}
+                </span>
                 <span class = "product_price">
                     {{ item.product.price }}&nbspруб
                 </span>
