--- a/adminapp/templates/adminapp/user_delete.html
+++ b/adminapp/templates/adminapp/user_delete.html
@@ -3,21 +3,11 @@
 
 {% block content %}
     <div class="user_delete">
-        Уверены, что хотите {% if user_to_delete.is_active %}удалить{% else %}восстановить{% endif %} {{ user_to_delete.username }}
-        {% if user_to_delete.first_name %}
-            ({{ user_to_delete.first_name|title }}</b>
-            {% if user_to_delete.last_name %}
-                {{ user_to_delete.last_name|title }}
-            {% endif %})
-        {% endif %}
-        ?
-        <form action="{% url 'adminapp:user_delete' user_to_delete.pk %}" method="post">
+        Уверены, что хотите {% if object.is_active %}удалить{% else %}восстановить{% endif %} <strong>{{ object.username }}</strong>?
+        <form action="{% url 'adminapp:user_delete' object.pk %}" method="post">
             {% csrf_token %}
-            {% if user_to_delete.is_active %} 
-                <input class="btn btn-danger" type="submit" value="удалить">
-            {% else %}
-                <input class="btn btn-primary" type="submit" value="восстановить">
-            {% endif %} 
+            {{ form.as_p }}
+            <input class="btn btn-danger" type="submit" value="{% if object.is_active %}Удалить{% else %}Восстановить{% endif %}">
         </form>
         <button class="btn btn-success">
             <a href="{% url 'adminapp:users' %}">Отмена</a>
