--- a/adminapp/templates/adminapp/category_delete.html
+++ b/adminapp/templates/adminapp/category_delete.html
@@ -7,7 +7,7 @@
         <form action="{% url 'adminapp:category_delete' object.pk %}" method="post">
             {% csrf_token %} 
             {{ form.as_p }}
-            <input class="btn btn-danger" type="submit" value="удалить" />
+            <input class="btn btn-danger" type="submit" value="{% if object.is_active %}Удалить{% else %}Восстановить{% endif %}">
         </form>
         <button class="btn btn-success">
             <a href="{% url 'adminapp:categories' %}">Отмена</a>
