--- a/adminapp/templates/adminapp/product_delete.html
+++ b/adminapp/templates/adminapp/product_delete.html
@@ -7,7 +7,7 @@
         <form action="{% url 'admin:product_delete' object.pk %}" method="post">
             {% csrf_token %} 
             {{ form.as_p }}
-            <input class="btn btn-danger" type="submit" value="{% if object.is_active %}Удалить{% else %}Восстановить{% endif %}" />
+            <input class="btn btn-danger" type="submit" value="{% if object.is_active %}Удалить{% else %}Восстановить{% endif %}">
         </form>
         <button class="btn btn-success">
             <a href="{% url 'admin:products' object.category.pk %}">Отмена</a>
